@@ -7,10 +7,10 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.petros.bookstore.config.TestSecurityConfig;
-import com.petros.bookstore.dto.BookRequestDto;
-import com.petros.bookstore.dto.BookResponseDto;
-import com.petros.bookstore.dto.BookUpdateRequestDto;
-import com.petros.bookstore.exception.ResourceNotFoundException;
+import com.petros.bookstore.dto.BookDTO.BookRequestDto;
+import com.petros.bookstore.dto.BookDTO.BookResponseDto;
+import com.petros.bookstore.dto.BookDTO.BookUpdateRequestDto;
+import com.petros.bookstore.exception.customException.ResourceNotFoundException;
 import com.petros.bookstore.model.enums.Genre;
 import com.petros.bookstore.repository.BookRepository;
 import com.petros.bookstore.service.BookService;
@@ -36,153 +36,126 @@ import org.springframework.test.web.servlet.MockMvc;
 @ActiveProfiles("test")
 class BookControllerTest {
 
-  @Autowired private MockMvc mockMvc;
+    @Autowired
+    private MockMvc mockMvc;
 
-  @Autowired private BookService bookService;
+    @Autowired
+    private BookService bookService;
 
-  @TestConfiguration
-  static class Config {
+    @TestConfiguration
+    static class Config {
 
-    @Bean
-    public BookRepository bookRepository() {
-      return Mockito.mock(BookRepository.class);
+        @Bean
+        public BookRepository bookRepository() {
+            return Mockito.mock(BookRepository.class);
+        }
+
+        @Bean
+        public BookService bookService() {
+            return Mockito.mock(BookService.class);
+        }
     }
 
-    @Bean
-    public BookService bookService() {
-      return Mockito.mock(BookService.class);
+    private static final ObjectMapper mapper = new ObjectMapper();
+
+    private static String asJsonString(final Object obj) {
+        try {
+            return mapper.writeValueAsString(obj);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
-  }
 
-  private static final ObjectMapper mapper = new ObjectMapper();
+    @Test
+    @DisplayName("GET /books - search by title and genre - books found")
+    void testSearchBooksFound() throws Exception {
+        BookResponseDto book1 = new BookResponseDto(1L, "Title 1", "Author 1", "Description", 12.99, 10,
+                Genre.SCIENCE_FICTION);
+        BookResponseDto book2 = new BookResponseDto(2L, "Title 2", "Author 2", "Description", 15.99, 5, Genre.FANTASY);
+        List<BookResponseDto> books = Arrays.asList(book1, book2);
+        Page<BookResponseDto> page = new PageImpl<>(books, PageRequest.of(0, 10), books.size());
 
-  private static String asJsonString(final Object obj) {
-    try {
-      return mapper.writeValueAsString(obj);
-    } catch (Exception e) {
-      throw new RuntimeException(e);
+        when(bookService.searchBooks(any(), any(), any(), any(), any(), any(), any())).thenReturn(page);
+
+        mockMvc.perform(get("/books").param("title", "Title").param("genre", "SCIENCE_FICTION")
+                .contentType(MediaType.APPLICATION_JSON)).andExpect(status().isOk())
+                .andExpect(jsonPath("$.content[0].id").value(1L)).andExpect(jsonPath("$.content[1].id").value(2L));
     }
-  }
 
-  @Test
-  @DisplayName("GET /books - search by title and genre - books found")
-  void testSearchBooksFound() throws Exception {
-    BookResponseDto book1 =
-        new BookResponseDto(
-            1L, "Title 1", "Author 1", "Description", 12.99, 10, Genre.SCIENCE_FICTION);
-    BookResponseDto book2 =
-        new BookResponseDto(2L, "Title 2", "Author 2", "Description", 15.99, 5, Genre.FANTASY);
-    List<BookResponseDto> books = Arrays.asList(book1, book2);
-    Page<BookResponseDto> page = new PageImpl<>(books, PageRequest.of(0, 10), books.size());
+    @Test
+    @DisplayName("GET /books - search by title and genre - no books found")
+    void testSearchBooksNotFound() throws Exception {
+        Page<BookResponseDto> page = new PageImpl<>(List.of(), PageRequest.of(0, 10), 0);
+        when(bookService.searchBooks(any(), any(), any(), any(), any(), any(), any())).thenReturn(page);
 
-    when(bookService.searchBooks(any(), any(), any(), any(), any(), any(), any())).thenReturn(page);
+        mockMvc.perform(get("/books").param("title", "Nonexistent").param("genre", "SCIENCE_FICTION")
+                .contentType(MediaType.APPLICATION_JSON)).andExpect(status().isOk())
+                .andExpect(jsonPath("$.content").isEmpty());
+    }
 
-    mockMvc
-        .perform(
-            get("/books")
-                .param("title", "Title")
-                .param("genre", "SCIENCE_FICTION")
-                .contentType(MediaType.APPLICATION_JSON))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$.content[0].id").value(1L))
-        .andExpect(jsonPath("$.content[1].id").value(2L));
-  }
+    @Test
+    @DisplayName("POST /books - success")
+    void testAddBook() throws Exception {
+        BookRequestDto request = new BookRequestDto("Title", "Author", "Description", 12.99, 10, Genre.SCIENCE_FICTION);
+        BookResponseDto response = new BookResponseDto(1L, "Title", "Author", "Description", 12.99, 10,
+                Genre.SCIENCE_FICTION);
 
-  @Test
-  @DisplayName("GET /books - search by title and genre - no books found")
-  void testSearchBooksNotFound() throws Exception {
-    Page<BookResponseDto> page = new PageImpl<>(List.of(), PageRequest.of(0, 10), 0);
-    when(bookService.searchBooks(any(), any(), any(), any(), any(), any(), any())).thenReturn(page);
+        when(bookService.save(any(BookRequestDto.class))).thenReturn(response);
 
-    mockMvc
-        .perform(
-            get("/books")
-                .param("title", "Nonexistent")
-                .param("genre", "SCIENCE_FICTION")
-                .contentType(MediaType.APPLICATION_JSON))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$.content").isEmpty());
-  }
+        mockMvc.perform(post("/books").contentType(MediaType.APPLICATION_JSON).content(asJsonString(request)))
+                .andExpect(status().isOk()).andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.title").value("Title"));
+    }
 
-  @Test
-  @DisplayName("POST /books - success")
-  void testAddBook() throws Exception {
-    BookRequestDto request =
-        new BookRequestDto("Title", "Author", "Description", 12.99, 10, Genre.SCIENCE_FICTION);
-    BookResponseDto response =
-        new BookResponseDto(1L, "Title", "Author", "Description", 12.99, 10, Genre.SCIENCE_FICTION);
+    @Test
+    @DisplayName("GET /books/{id} - found")
+    void testGetBookById() throws Exception {
+        BookResponseDto response = new BookResponseDto(1L, "Title", "Author", "Desc", 10.99, 5, Genre.SCIENCE_FICTION);
 
-    when(bookService.save(any(BookRequestDto.class))).thenReturn(response);
+        when(bookService.findBookById(1L)).thenReturn(response);
 
-    mockMvc
-        .perform(
-            post("/books").contentType(MediaType.APPLICATION_JSON).content(asJsonString(request)))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$.id").value(1L))
-        .andExpect(jsonPath("$.title").value("Title"));
-  }
+        mockMvc.perform(get("/books/1")).andExpect(status().isOk()).andExpect(jsonPath("$.id").value(1L));
+    }
 
-  @Test
-  @DisplayName("GET /books/{id} - found")
-  void testGetBookById() throws Exception {
-    BookResponseDto response =
-        new BookResponseDto(1L, "Title", "Author", "Desc", 10.99, 5, Genre.SCIENCE_FICTION);
+    @Test
+    @DisplayName("GET /books/{bookId} - not found")
+    void testGetBookNotFound() throws Exception {
+        Long invalidBookId = 999L;
 
-    when(bookService.findBookById(1L)).thenReturn(response);
+        when(bookService.findBookById(invalidBookId))
+                .thenThrow(new ResourceNotFoundException("Book with ID " + invalidBookId + " not found"));
 
-    mockMvc
-        .perform(get("/books/1"))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$.id").value(1L));
-  }
+        mockMvc.perform(get("/books/{bookId}", invalidBookId)).andExpect(status().isNotFound())
+                .andExpect(jsonPath("$.message").value("Book with ID " + invalidBookId + " not found"));
+    }
 
-  @Test
-  @DisplayName("GET /books/{bookId} - not found")
-  void testGetBookNotFound() throws Exception {
-    Long invalidBookId = 999L;
+    @Test
+    @DisplayName("PUT /books/{id} - update")
+    void testUpdateBook() throws Exception {
+        BookUpdateRequestDto updateRequest = new BookUpdateRequestDto("Updated Title", null, null, null, null, null);
 
-    when(bookService.findBookById(invalidBookId))
-        .thenThrow(new ResourceNotFoundException("Book with ID " + invalidBookId + " not found"));
+        BookResponseDto updatedResponse = new BookResponseDto(1L, "Updated Title", "Author", "Desc", 10.99, 5,
+                Genre.SCIENCE_FICTION);
 
-    mockMvc
-        .perform(get("/books/{bookId}", invalidBookId))
-        .andExpect(status().isNotFound())
-        .andExpect(jsonPath("$.message").value("Book with ID " + invalidBookId + " not found"));
-  }
+        when(bookService.updateBook(Mockito.eq(1L), any(BookUpdateRequestDto.class))).thenReturn(updatedResponse);
 
-  @Test
-  @DisplayName("PUT /books/{id} - update")
-  void testUpdateBook() throws Exception {
-    BookUpdateRequestDto updateRequest = new BookUpdateRequestDto("Updated Title", null, null, null, null, null);
+        mockMvc.perform(put("/books/1").contentType(MediaType.APPLICATION_JSON).content(asJsonString(updateRequest)))
+                .andExpect(status().isOk()).andExpect(jsonPath("$.title").value("Updated Title"));
+    }
 
-    BookResponseDto updatedResponse =
-        new BookResponseDto(1L, "Updated Title", "Author", "Desc", 10.99, 5, Genre.SCIENCE_FICTION);
+    @Test
+    @DisplayName("DELETE /books/{id} - success")
+    void testDeleteBook() throws Exception {
+        when(bookService.deleteBookById(1L)).thenReturn(true);
 
-    when(bookService.updateBook(Mockito.eq(1L), any(BookUpdateRequestDto.class)))
-        .thenReturn(updatedResponse);
+        mockMvc.perform(delete("/books/1")).andExpect(status().isNoContent());
+    }
 
-    mockMvc
-        .perform(
-            put("/books/1")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(asJsonString(updateRequest)))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$.title").value("Updated Title"));
-  }
+    @Test
+    @DisplayName("DELETE /books/{id} - not found")
+    void testDeleteBookNotFound() throws Exception {
+        when(bookService.deleteBookById(99L)).thenReturn(false);
 
-  @Test
-  @DisplayName("DELETE /books/{id} - success")
-  void testDeleteBook() throws Exception {
-    when(bookService.deleteBookById(1L)).thenReturn(true);
-
-    mockMvc.perform(delete("/books/1")).andExpect(status().isNoContent());
-  }
-
-  @Test
-  @DisplayName("DELETE /books/{id} - not found")
-  void testDeleteBookNotFound() throws Exception {
-    when(bookService.deleteBookById(99L)).thenReturn(false);
-
-    mockMvc.perform(delete("/books/99")).andExpect(status().isNoContent());
-  }
+        mockMvc.perform(delete("/books/99")).andExpect(status().isNoContent());
+    }
 }
